fixed button, stuck on design

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,9 @@
 body {
   font-family: "Montserrat";
-  /* background-image: linear-gradient(
-      rgba(255, 255, 255, 1),
-      rgba(255, 255, 255, 0.5)
-    ),
-    url(https://images.unsplash.com/photo-1585862705417-671ae64f0eb7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80); */
-  background-size: cover;
   min-height: 100vh;
   margin: 0;
   padding: 0;
   overflow: hidden;
-
   color: rgba(0, 0, 0, 0.7);
 }
 .img-book {
@@ -31,6 +24,22 @@ h3 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+.headertext {
+  margin-bottom: 40px;
+}
+
+.btn-newBook {
+  font-family: "Libre Baskerville", serif;
+  color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 20px;
+  border: none;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  font-size: 17px;
+  font-weight: bold;
+  background-color: white;
 }
 
 .container {
